[project]
name = "near-pytest"
version = "0.5.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "base58>=2.1.1",
    "nearc>=0.7.2",
    "py-near-fork>=0.1.1",
    "pynacl>=1.5.0",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.9.10",
    "types-requests>=2.32.0.20250306",
]

[[tool.mypy.overrides]]
module = ["nearc", "nearc.builder"]
follow_untyped_imports = true

[tool.semantic_release]
version_toml = [
    "pyproject.toml:project.version"
]
branch = "main"
changelog_file = "CHANGELOG.md"
commit_message = "chore(release): {version} [skip ci]"
build_command = "uv build"
